@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-16T16:17:12Z",
+  "timestamp" : "2022-04-17T16:17:05Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 13,
-  "uniques" : 7,
+  "count" : 14,
+  "uniques" : 8,
   "clones" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
@@ -11,6 +11,13 @@
       "count_minmax": [ 5, 13 ],
       "uniques": 7,
       "uniques_minmax": [ 4, 7 ]
+    },
+    {
+      "timestamp": "2022-04-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
