@@ -1,11 +1,16 @@
 {
-  "count": 13,
-  "uniques": 7,
+  "count": 14,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
       "count": 13,
       "uniques": 7
+    },
+    {
+      "timestamp": "2022-04-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
